[metadata]
name = ILA
version = 0.1.0
# バージョンをPythonスクリプト内の変数から取ることも出来る
# package_aの__init__.pyに`version = "1.0.0"`などと宣言しておけば以下で参照できる
# version = attr: package_a.version
author = Masanari Kondo
author_email = m-kondo@se.is.kit.ac.jp
description = WIP
url = https://github.com/MKmknd/ILA
# ライセンスファイルへのパスを指定
license_file = LICENSE

[options]
# Pythonバージョンの制約
pythonrequire = >=3.5
# 含めるパッケージの選択．この場合は自動で探索
packages = find:
# 列挙する場合は普通にインストールするパッケージを羅列すれば良い
# ただしトップレベルパッケージのみ書いてもそれ以下のサブパッケージは含まれない
# packages =
#    package_a

# 依存関係の列挙
# Pythonのベストプラクティスによるとここでガチガチにバージョンを固定すべきでないとしている
# バージョン制約の記法はrequirements.txtと同じ
#install_requires =
#    Utils @ git+https://github.com/MKmknd/Utils@f0d2d040feaa7018847afada43c9276e59d499f0#egg=Utils
#    #git+ssh://git@github.com/MKmknd/Utils.git@master#egg=Utils-1.0.2
#    #git+https://github.com/MKmknd/Utils.git@master#egg=Utils
#    #Utils @ git+https://github.com/MKmknd/Utils#egg=Utils@master
##    fuga>=1.0.0,2.0.0

#[options.packages.find]
## 自動探索から外すものを列挙
## そのモジュールが複数のサブディレクトリも含む場合，`.*`も指定する必要がある
#exclude =
#    tests
#    tests.*
#    hoge

#[options.entry_points]
#console_scripts =
#    # コマンド名 = モジュールまでのパス:関数名
#    hoge = package_a.hoge:main
